@@ -1895,7 +1895,13 @@ handle_include (int verbatim_include)
   get_rest_of_line (0, &arg);
   /* We really only want to expand @value, but it's easier to just do
      everything.  TeX will only work with @value.  */
-  filename = text_expansion (arg);
+  {
+    int save_in_fixed_width_font = in_fixed_width_font;
+    in_fixed_width_font = 1;  /* do not change -- to -, etc.  */
+    filename = text_expansion (arg);
+    in_fixed_width_font = save_in_fixed_width_font;    
+  }
+
   free (arg);
   
   if (macro_expansion_output_stream && !executing_string)
